{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 39,
  "lineage": "f0945ea6-030d-942b-9414-72ae090c002f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "e-learning-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008a809010f7d81b9",
            "domain": "vpc",
            "id": "eipalloc-008a809010f7d81b9",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-52-56-125-83.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.125.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "e-learning-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:internet-gateway/igw-001354d63531c898f",
            "id": "igw-001354d63531c898f",
            "owner_id": "492367642859",
            "tags": {
              "Name": "e-learning-igw-test"
            },
            "tags_all": {
              "Name": "e-learning-igw-test"
            },
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "e-learning-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/6ed54c38e8a778fe",
            "arn_suffix": "app/e-learning-alb/6ed54c38e8a778fe",
            "desync_mitigation_mode": "defensive",
            "dns_name": "e-learning-alb-776435294.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/6ed54c38e8a778fe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "e-learning-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b8a2e22ffa3e86c7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0062bec16e9ea1242"
              },
              {
                "subnet_id": "subnet-05b87f160e3ce2551"
              }
            ],
            "subnets": [
              "subnet-0062bec16e9ea1242",
              "subnet-05b87f160e3ce2551"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-03c7316a7500888f7",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/6ed54c38e8a778fe/07ff35b2fbf25788",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/6ed54c38e8a778fe/07ff35b2fbf25788",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/6ed54c38e8a778fe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.e-learning-alb",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/6ed54c38e8a778fe/b55def63fe0fb945",
            "certificate_arn": "arn:aws:acm:eu-west-2:492367642859:certificate/7bb909c6-2c8c-488c-89bb-79d32265b15b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/e60c36a6ba57ffd9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/6ed54c38e8a778fe/b55def63fe0fb945",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/6ed54c38e8a778fe",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ecs-acm-cert",
            "aws_lb.e-learning-alb",
            "aws_lb_target_group.e-learning-alb-tg",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "e-learning-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/e60c36a6ba57ffd9",
            "arn_suffix": "targetgroup/e-learning-alb-tg/e60c36a6ba57ffd9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/e60c36a6ba57ffd9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "e-learning-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "e-learning-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008a809010f7d81b9",
            "connectivity_type": "public",
            "id": "nat-08524f09352b3ed94",
            "network_interface_id": "eni-06fc2e549de9cdceb",
            "private_ip": "10.0.18.225",
            "public_ip": "52.56.125.83",
            "subnet_id": "subnet-0062bec16e9ea1242",
            "tags": {
              "Name": "gw NAT-test"
            },
            "tags_all": {
              "Name": "gw NAT-test"
            }
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0b239a5573916d3dd",
            "id": "rtb-0b239a5573916d3dd",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08524f09352b3ed94",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "e-learning-priv-rt-test"
            },
            "tags_all": {
              "Name": "e-learning-priv-rt-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0c5fe22456cebba32",
            "id": "rtb-0c5fe22456cebba32",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001354d63531c898f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "e-learning-pub-rt-test"
            },
            "tags_all": {
              "Name": "e-learning-pub-rt-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0912d3548964f8574",
            "route_table_id": "rtb-0b239a5573916d3dd",
            "subnet_id": "subnet-036921140625d4642"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub1",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f4705417026ae24",
            "route_table_id": "rtb-0b239a5573916d3dd",
            "subnet_id": "subnet-057c1802923fb6984"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub2",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01758b855b8c9890e",
            "route_table_id": "rtb-0c5fe22456cebba32",
            "subnet_id": "subnet-0062bec16e9ea1242"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019e661e7e3828cb4",
            "route_table_id": "rtb-0c5fe22456cebba32",
            "subnet_id": "subnet-05b87f160e3ce2551"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-0b8a2e22ffa3e86c7",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8a2e22ffa3e86c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls_http",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls_http-test"
            },
            "tags_all": {
              "Name": "allow_tls_http-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-0d075d24557943eee",
            "description": "Allow TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d075d24557943eee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TCP from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8a2e22ffa3e86c7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "e-learning-ecs-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "e-learning-ecs-sg-test"
            },
            "tags_all": {
              "Name": "e-learning-ecs-sg-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-06ed99cb2bd2735e5",
            "description": "Allows traffic only on port 5432 with ecs cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ed99cb2bd2735e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ecs security group to db",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d075d24557943eee"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgresql-rds-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-instance-sec-group-test"
            },
            "tags_all": {
              "Name": "db-instance-sec-group-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_security_group.e-learning-ecs-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-036921140625d4642",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036921140625d4642",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub1-test"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub1-test"
            },
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-057c1802923fb6984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.19.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057c1802923fb6984",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub2-test"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub2-test"
            },
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0062bec16e9ea1242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.18.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0062bec16e9ea1242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub1-test"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub1-test"
            },
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-05b87f160e3ce2551",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b87f160e3ce2551",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub2-test"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub2-test"
            },
            "vpc_id": "vpc-03c7316a7500888f7"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "e-learning",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:vpc/vpc-03c7316a7500888f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ca4217204917a3c",
            "default_route_table_id": "rtb-055cd3218cb59e622",
            "default_security_group_id": "sg-045da90a4284f0319",
            "dhcp_options_id": "dopt-07de7887fa266f1ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c7316a7500888f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055cd3218cb59e622",
            "owner_id": "492367642859",
            "tags": {
              "Name": "e-learning-test"
            },
            "tags_all": {
              "Name": "e-learning-test"
            }
          }
        }
      ]
    }
  ]
}